Update maven-dependency-plugin version to 3.0.2

--- a/runners/apex/pom.xml
+++ b/runners/apex/pom.xml
@@ -250,6 +250,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
+        <version>${maven-dependency-plugin.version}</version>
         <executions>
           <execution>
             <goals>
@@ -300,7 +301,7 @@
                   <pluginExecutionFilter>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <versionRange>[2.10,)</versionRange>
+                    <version>${maven-dependency-plugin.version}</version>
                     <goals>
                       <goal>tree</goal>
                     </goals>
