--- a/runners/gcp/gcemd/pom.xml
+++ b/runners/gcp/gcemd/pom.xml
@@ -69,6 +69,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
+        <version>${maven-dependency-plugin.version}</version>
         <executions>
           <execution>
             <id>copy-dependency</id>
