Add precommit integration tests to examples/java
Also make Jenkins run a common root task which enumerates all the tasks that it should run.

--- a/build_rules.gradle
+++ b/build_rules.gradle
@@ -140,7 +140,7 @@ ext.applyJavaNature = {
     options.encoding = "UTF-8"
   }
 
-  // Configure the test tasks to always use JUnit and also configure the set of tests executed
+  // Configure the default test tasks set of tests executed
   // to match the equivalent set that is executed by the maven-surefire-plugin.
   // See http://maven.apache.org/components/surefire/maven-surefire-plugin/test-mojo.html
   test {
@@ -148,6 +148,10 @@ ext.applyJavaNature = {
     include "**/*Test.class"
     include "**/*Tests.class"
     include "**/*TestCase.class"
+  }
+
+  // Configure all test tasks to use JUnit
+  tasks.withType(Test) {
     useJUnit { }
   }
 
