--- a/runners/reference/java/pom.xml
+++ b/runners/reference/java/pom.xml
@@ -52,6 +52,11 @@
       <artifactId>protobuf-java</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+    </dependency>
+
     <!-- build dependencies -->
     <dependency>
       <groupId>com.google.auto.value</groupId>
