Update scm to use gitbox.apache.org

--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:https://git-wip-us.apache.org/repos/asf/beam.git</connection>
-    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/beam.git</developerConnection>
-    <url>https://git-wip-us.apache.org/repos/asf?p=beam.git;a=summary</url>
+    <connection>scm:git:https://gitbox.apache.org/repos/asf/beam.git</connection>
+    <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/beam.git</developerConnection>
+    <url>https://gitbox.apache.org/repos/asf?p=beam.git;a=summary</url>
     <tag>HEAD</tag>
   </scm>
 
