Add protobuf-java-util to included shaded dependencies.

--- a/runners/direct-java/pom.xml
+++ b/runners/direct-java/pom.xml
@@ -58,6 +58,7 @@
                   <includes>
                     <include>com.google.guava:guava</include>
                     <include>com.google.protobuf:protobuf-java</include>
+                    <include>com.google.protobuf:protobuf-java-util</include>
                     <include>org.apache.beam:beam-model-pipeline</include>
                     <include>org.apache.beam:beam-runners-core-construction-java</include>
                     <include>org.apache.beam:beam-runners-core-java</include>
@@ -145,7 +146,7 @@
             </goals>
             <configuration>
               <groups>org.apache.beam.sdk.testing.NeedsRunner</groups>
-              <!-- 100MB keys work on the direct runner, but make the test too slow. --> 
+              <!-- 100MB keys work on the direct runner, but make the test too slow. -->
               <excludedGroups>org.apache.beam.sdk.testing.LargeKeys$Above100MB</excludedGroups>
               <parallel>none</parallel>
               <failIfNoTests>true</failIfNoTests>
