--- a/examples/java/pom.xml
+++ b/examples/java/pom.xml
@@ -137,6 +137,24 @@
             </exclusion>
           </exclusions>
         </dependency>
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.6.5</version>
+          <scope>runtime</scope>
+        </dependency>
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+          <version>2.6.5</version>
+          <scope>runtime</scope>
+        </dependency>
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.6.5</version>
+          <scope>runtime</scope>
+        </dependency>
       </dependencies>
     </profile>
 
