--- a/examples/java/build.gradle
+++ b/examples/java/build.gradle
@@ -42,6 +42,11 @@ configurations.sparkRunnerPreCommit {
   // because JUL -> SLF4J -> JUL, and similarly JDK14 -> SLF4J -> JDK14
   exclude group: "org.slf4j", module: "jul-to-slf4j"
   exclude group: "org.slf4j", module: "slf4j-jdk14"
+  resolutionStrategy {
+    force "com.fasterxml.jackson.core:jackson-core:2.6.5"
+    force "com.fasterxml.jackson.core:jackson-annotations:2.6.5"
+    force "com.fasterxml.jackson.core:jackson-databind:2.6.5"
+  }
 }
 
 dependencies {
