--- a/pom.xml
+++ b/pom.xml
@@ -2010,6 +2010,10 @@
                   <include>**/sdks/python/LICENSE</include>
                   <include>**/sdks/python/NOTICE</include>
                   <include>**/sdks/python/README.md</include>
+                  <include>**/sdks/python/apache_beam/portability/api/*pb2*.*</include>
+                  <include>**/sdks/python/**/*.c</include>
+                  <include>**/sdks/python/**/*.so</include>
+                  <include>**/sdks/python/**/*.egg</include>
                 </includes>
                 <followSymlinks>false</followSymlinks>
               </fileset>
