--- a/sdks/java/extensions/sql/build.gradle
+++ b/sdks/java/extensions/sql/build.gradle
@@ -103,9 +103,9 @@ shadowJar {
     include(dependency("org.codehaus.janino:.*"))
     include(dependency(library.java.protobuf_java))
   }
-  relocate "com.google.protobuf", "org.apache.beam." + project.name.replace("-", ".") + "repackaged.com.google.protobuf"
-  relocate "org.apache.calcite", "org.apache.beam." + project.name.replace("-", ".") + "repackaged.org.apache.calcite"
-  relocate "org.codehaus", "org.apache.beam." + project.name.replace("-", ".") + ".repackaged.org.codehaus"
+  relocate "com.google.protobuf", "org.apache." + project.name.replace("-", ".") + ".repackaged.com.google.protobuf"
+  relocate "org.apache.calcite", "org.apache." + project.name.replace("-", ".") + ".repackaged.org.apache.calcite"
+  relocate "org.codehaus", "org.apache." + project.name.replace("-", ".") + ".repackaged.org.codehaus"
 }
 
 task packageTests(type: Jar) {
