--- a/pom.xml
+++ b/pom.xml
@@ -424,6 +424,12 @@
 
       <dependency>
         <groupId>org.apache.beam</groupId>
+        <artifactId>beam-sdks-java-extensions-sql</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.beam</groupId>
         <artifactId>beam-sdks-java-fn-execution</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
