--- a/build.gradle
+++ b/build.gradle
@@ -241,6 +241,7 @@ rat {
     "**/*.iml",
     "**/*.ipr",
     "**/*.iws",
+    "**/out/**/*",
 
     // .gitignore: Ignore Eclipse files.
     "**/.classpath",
