--- a/sdks/java/core/pom.xml
+++ b/sdks/java/core/pom.xml
@@ -52,9 +52,10 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
+          <version>${maven-checkstyle-plugin.version}</version>
           <configuration>
             <!-- Set testSourceDirectory in order to exclude generated-test-sources -->
-            <testSourceDirectory>${project.basedir}/src/test/</testSourceDirectory>
+            <testSourceDirectories>${project.basedir}/src/test/</testSourceDirectories>
           </configuration>
         </plugin>
 
