--- a/runners/google-cloud-dataflow-java/pom.xml
+++ b/runners/google-cloud-dataflow-java/pom.xml
@@ -199,6 +199,7 @@
                   <includes>
                     <include>com.google.guava:guava</include>
                     <include>com.google.protobuf:protobuf-java</include>
+                    <include>com.google.protobuf:protobuf-java-util</include>
                     <include>org.apache.beam:beam-model-pipeline</include>
                     <include>org.apache.beam:beam-runners-core-construction-java</include>
                   </includes>
