--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -93,6 +93,7 @@ deps=
   pylint==1.7.2
   future==0.16.0
   isort==4.2.15
+  flake8==3.5.0
 whitelist_externals=time
 commands =
   time pip install -e .[test]
