--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -97,6 +97,7 @@ deps=
   pylint==1.7.2
   future==0.16.0
   isort==4.2.15
+  flake8==3.5.0
 whitelist_externals=time
 commands =
   python --version
