--- a/runners/flink/pom.xml
+++ b/runners/flink/pom.xml
@@ -66,6 +66,7 @@
                   <failIfNoTests>true</failIfNoTests>
                   <dependenciesToScan>
                     <dependency>org.apache.beam:beam-sdks-java-core</dependency>
+                    <dependency>org.apache.beam:beam-runners-core-java</dependency>
                   </dependenciesToScan>
                   <systemPropertyVariables>
                     <beamTestPipelineOptions>
@@ -99,6 +100,7 @@
                   <failIfNoTests>true</failIfNoTests>
                   <dependenciesToScan>
                     <dependency>org.apache.beam:beam-sdks-java-core</dependency>
+                    <dependency>org.apache.beam:beam-runners-core-java</dependency>
                   </dependenciesToScan>
                   <systemPropertyVariables>
                     <beamTestPipelineOptions>
