--- a/sdks/java/core/build.gradle
+++ b/sdks/java/core/build.gradle
@@ -78,6 +78,8 @@ dependencies {
   shadowTest "com.esotericsoftware.kryo:kryo:2.21"
   flinkValidatesRunner project(path: project.path, configuration: "shadowTest")
   flinkValidatesRunner project(path: ":beam-runners-parent:beam-runners-flink_2.11", configuration: "shadow")
+  sparkValidatesRunner project(path: project.path, configuration: "shadowTest")
+  sparkValidatesRunner project(path: ":beam-runners-parent:beam-runners-spark", configuration: "shadow")
 }
 
 // Shade dependencies.
@@ -125,18 +127,33 @@ task packageTests(type: Jar) {
 }
 
 class ValidatesRunnerConfig {
-  String testName
+  // Task name prefix
+  String testPrefix
+  // Runner name in documentation string
+  String runnerName
+  // List of test categories to exclude from this task. Optional.
   List<String> excludes
+  // Pipeline options command line arguments.
   // TODO: Can option keys be specified multiple times?
   Map<String, String> pipelineOptions
+  // Configuration to use for test runtime classpath.
   FileCollection configuration
+  // Additional system properties to be set for tests. Optional.
+  Map<String, String> systemProperties
 }
 
 def createValidatesRunner(Map m) {
   def config = m as ValidatesRunnerConfig
-  tasks.create(name: "${config.testName}ValidatesRunner", type: Test) {
+  assert config.testPrefix != null
+  assert config.runnerName != null
+  assert config.pipelineOptions != null
+  assert config.configuration != null
+  tasks.create(name: "${config.testPrefix}ValidatesRunner", type: Test) {
+    group = "Verification"
+    description = "Validate ${config.runnerName} runner"
     def optionsList = config.pipelineOptions.collect {
       // Escape strings with embedded '\' and '"' characters.
+      // TODO: Verify that this happens correctly between JSON and command line parsing.
       def key = it.getKey().replaceAll("\\\\", "\\\\\\\\").replaceAll("\"", "\\\\\"")
       def value = it.getValue().replaceAll("\\\\", "\\\\\\\\").replaceAll("\"", "\\\\\"")
       "\"--${key}=${value}\""
@@ -145,6 +162,11 @@ def createValidatesRunner(Map m) {
 
     println "PIPELINE OPTIONS: $pipelineOptions"
     systemProperty "beamTestPipelineOptions", pipelineOptions
+    if (config.systemProperties != null) {
+      for (Map.Entry<String, String> property : config.systemProperties) {
+        systemProperty property.getKey(), property.getValue()
+      }
+    }
     // TODO: Does Spark require a different forking strategy?
     maxParallelForks 4
     classpath = config.configuration
@@ -172,8 +194,19 @@ def flinkPipelineOptions(streaming) {
   ]
 }
 
-createValidatesRunner(testName: "flinkBatch", configuration: configurations.flinkValidatesRunner,excludes: flinkExcludedCategories, pipelineOptions: flinkPipelineOptions(false))
-createValidatesRunner(testName: "flinkStreaming", configuration: configurations.flinkValidatesRunner, excludes: flinkExcludedCategories, pipelineOptions: flinkPipelineOptions(true))
+createValidatesRunner(
+    testPrefix: "flinkBatch",
+    runnerName: "Flink batch",
+    configuration: configurations.flinkValidatesRunner,
+    excludes: flinkExcludedCategories,
+    pipelineOptions: flinkPipelineOptions(false))
+
+createValidatesRunner(
+    testPrefix: "flinkStreaming",
+     runnerName: "Flink streaming",
+    configuration: configurations.flinkValidatesRunner,
+    excludes: flinkExcludedCategories, 
+    pipelineOptions: flinkPipelineOptions(true))
 
 def sparkBatchExcludedCategories = [
   'org.apache.beam.sdk.testing.UsesSplittableParDo',
@@ -182,16 +215,24 @@ def sparkBatchExcludedCategories = [
   'org.apache.beam.sdk.testing.UsesCustomWindowMerging',
 ]
 
-def sparkPipelineOptions(streaming) {
-  [
-    runner: "TestSparkRunner",
-    streaming: "false",
-    enableSparkMetricSinks: "false",
-  ]
-}
+def sparkBatchPipelineOptions = [
+  runner: "TestSparkRunner",
+  streaming: "false",
+  enableSparkMetricSinks: "false",
+]
 
-createValidatesRunner(testName: "sparkBatch", configuration: configurations.sparkValidatesRunner, excludes: sparkBatchExcludedCategories, pipelineOptions: sparkPipelineOptions(true))
-createValidatesRunner(testName: "sparkStreaming", configuration: configurations.sparkValidatesRunner, pipelineOptions: sparkPipelineOptions(false))
+def sparkBatchSystemProperties = [
+  "beam.spark.test.reuseSparkContext": "true",
+  "spark.ui.enabled": "false",
+  "spark.ui.showConsoleProgress": "false",
+]
+
+createValidatesRunner(
+  testPrefix: "sparkBatch",
+  runnerName: "Spark batch",
+  configuration: configurations.sparkValidatesRunner,
+  excludes: sparkBatchExcludedCategories,
+  pipelineOptions: sparkBatchPipelineOptions)
 
 artifacts.archives packageTests
 artifacts {
